crates/ars-components/src/input/number_input/snapshots/ars_components__input__number_input__tests__number_input_input_default_snapshot.snap
---
source: crates/ars-components/src/input/number_input/mod.rs
expression: snapshot_attrs(&api.input_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "number-input",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "num-label",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "100",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "5",
            ),
        ),
        (
            Id,
            String(
                "num-input",
            ),
        ),
        (
            InputMode,
            String(
                "decimal",
            ),
        ),
        (
            Role,
            String(
                "spinbutton",
            ),
        ),
        (
            Value,
            String(
                "5",
            ),
        ),
    ],
    styles: [],
}
