crates/ars-components/src/input/number_input/snapshots/ars_components__input__number_input__tests__number_input_input_invalid_required_with_form_snapshot.snap
---
source: crates/ars-components/src/input/number_input/mod.rs
expression: snapshot_attrs(&api.input_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "number-input",
            ),
        ),
        (
            Aria(
                ErrorMessage,
            ),
            String(
                "num-error-message",
            ),
        ),
        (
            Aria(
                Invalid,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "num-label",
            ),
        ),
        (
            Aria(
                Required,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "100",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "7",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "num-error-message",
            ),
        ),
        (
            Id,
            String(
                "num-input",
            ),
        ),
        (
            InputMode,
            String(
                "decimal",
            ),
        ),
        (
            Role,
            String(
                "spinbutton",
            ),
        ),
        (
            Form,
            String(
                "checkout",
            ),
        ),
        (
            Name,
            String(
                "qty",
            ),
        ),
        (
            Required,
            Bool(
                true,
            ),
        ),
        (
            Value,
            String(
                "7",
            ),
        ),
    ],
    styles: [],
}
