crates/ars-components/src/input/number_input/snapshots/ars_components__input__number_input__tests__number_input_root_idle_snapshot.snap
---
source: crates/ars-components/src/input/number_input/mod.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "number-input",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "idle",
            ),
        ),
        (
            Id,
            String(
                "num",
            ),
        ),
    ],
    styles: [],
}
